@@ -112,6 +112,7 @@ struct parameter param = {
 	,-1 /* preframes */
 	,-1 /* gain */
 	,NULL /* stream dump file */
+	,0 /* ICY interval */
 };
 
 mpg123_handle *mh = NULL;
@@ -467,6 +468,7 @@ topt opts[] = {
 	{0, "preframes", GLO_ARG|GLO_LONG, 0, &param.preframes, 0},
 	{0, "skip-id3v2", GLO_INT, set_frameflag, &frameflag, MPG123_SKIP_ID3V2},
 	{0, "streamdump", GLO_ARG|GLO_CHAR, 0, &param.streamdump, 0},
+	{0, "icy-interval", GLO_ARG|GLO_LONG, 0, &param.icy_interval, 0},
 	{0, 0, 0, 0, 0, 0}
 };
 
@@ -581,6 +583,14 @@ int open_track(char *fname)
 		error1("Cannot set ICY interval: %s", mpg123_strerror(mh));
 		if(param.verbose > 1) fprintf(stderr, "Info: ICY interval %li\n", (long)htd.icy_interval);
 	}
+
+	if(param.icy_interval > 0)
+	{
+		if(MPG123_OK != mpg123_param(mh, MPG123_ICY_INTERVAL, param.icy_interval, 0))
+		error1("Cannot set ICY interval: %s", mpg123_strerror(mh));
+		if(param.verbose > 1) fprintf(stderr, "Info: Forced ICY interval %li\n", param.icy_interval);
+	}
+
 	debug("OK... going to finally open.");
 	/* Now hook up the decoder on the opened stream or the file. */
 	if(network_sockets_used) 
@@ -593,6 +603,7 @@ int open_track(char *fname)
 		return 0;
 	}
 	debug("Track successfully opened.");
+
 	fresh = TRUE;
 	return 1;
 }
@@ -1247,7 +1258,8 @@ static void long_usage(int err)
 	fprintf(o,"        --index-size <n>   change size of frame index\n");
 	fprintf(o,"        --preframes  <n>   number of frames to decode in advance after seeking (to keep layer 3 bit reservoir happy)\n");
 	fprintf(o,"        --resync-limit <n> Set number of bytes to search for valid MPEG data; <0 means search whole stream.\n");
-	fprintf(o,"        --streamdump <f>   Dump a copy of input data (as it is read by libmpg123) to given file.\n");
+	fprintf(o,"        --streamdump <f>   Dump a copy of input data (as read by libmpg123) to given file.\n");
+	fprintf(o,"        --icy-interval <n> Enforce ICY interval in bytes (for playing a stream dump.\n");
 	fprintf(o,"\noutput/processing options\n\n");
 	fprintf(o," -o <o> --output <o>       select audio output module\n");
 	fprintf(o,"        --list-modules     list the available modules\n");
